# whisper_ggml_plus

./: CHANGELOG.md  FIX_LARGE_V3_TURBO_SEGMENTATION.md  README.md  pubspec.yaml
.dart_tool/: native_assets.yaml  package_config.json  package_graph.json
.dart_tool/build_resolvers/: sdk.sum.deps
.dart_tool/hooks_runner/objective_c/9fb02c5622aea66c3a53a942a16bf409/: dependencies.dependencies_hash_file.json  hook.dependencies_hash_file.json  hook.dill.d  input.json  output.json  stdout.txt
.dart_tool/lib/: objective_c.dylib
.github/: labeler.yml
.github/workflows/: conventional-pr-title.yml  labeler.yml  publish-pub.yml  release.yml  stale.yml
android/src/whisper/: CMakeLists.txt  main.cpp
android/src/whisper/whisper.cpp/: whisper.cpp  whisper.h
example/lib/: main.dart
ios/: whisper_ggml_plus.podspec
ios/Classes/: whisper_flutter_plus.cpp
ios/Classes/whisper/: ggml.c
ios/Classes/whisper/coreml/: whisper-encoder.mm
lib/src/: whisper.dart  whisper_controller.dart
macos/: whisper_ggml_plus.podspec
macos/Classes/: whisper_ggml.cpp
macos/Classes/whisper/: whisper.cpp
